--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,13 @@ target
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Documentation files (only README.md should be committed)
+README_PBFT.md
+*.md
+!README.md
+
+# Node logs and database files
+node_*.log
+node_*.pid
+*.db
