--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ rusqlite = { version = "0.29", features = ["bundled"] }
 actix-web = "4"
 actix-rt = "2"
 parking_lot = "0.12"
+async-trait = "0.1"
