--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,8 @@ actix-web = "4"
 actix-rt = "2"
 parking_lot = "0.12"
 async-trait = "0.1"
+dotenvy = "0.15"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "chrono"] }
+hostname = "0.4"
+sysinfo = "0.30"
