--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "rust-market-ledger"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "rust_market_ledger"
+path = "src/lib.rs"
+
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
