Add CI workflow with Rust standard checks
- Add GitHub Actions CI workflow
- Check code formatting with cargo fmt
- Run linter with cargo clippy
- Run unit tests
- Build project and examples
- Fix test assertions to match actual consensus names
- Add json feature to Cargo.toml
- Fix clippy warnings (unused imports, unused mut)
- Format code with cargo fmt

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,3 +52,7 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "chrono"] }
 hostname = "0.4"
 sysinfo = "0.30"
+
+[features]
+default = []
+json = ["tracing-subscriber/json"]
